Added a new file <style.css> and created new feature, context menu window, as a onclick event.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="css/vendor/normalize.css" rel="stylesheet" type="text/css">
     <link href="css/vendor/skeleton.css" rel="stylesheet" type="text/css">
     <link href="css/main.css" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
 
     <script src="js/vendor/jquery-2.2.0.min.js"></script>
     <script src="js/vendor/moment-with-locales.js"></script>
@@ -59,7 +60,7 @@
 <footer>
     <div class="container">
         <small>
-            <a href="https://github.com/mohamnag/nginx-file-browser">nginx file browser</a>
+            <a href="https://github.com/mohamnag/nginx-file-browser">OSS 프로젝트 테스트_git 추가</a>
         </small>
 
         <small>
